Add twitter image preview

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
     <!-- argent目前只支持png <link rel="icon" type="image/svg+xml" href="/favicon.svg"/> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png"> -->
     <!-- <link rel="alternative icon" type="image/png" sizes="32x32" href="/favicon.png"> -->
+    <meta name="description" content="Ethereum zkRollup Exchange and Payment Protocol">
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#242539">
     <meta name="google" content="notranslate">
     <meta http-equiv="Cache-Control" content="max-age=86400">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@loopringorg">
+    <meta name="twitter:creator" content="@loopringorg">
+    <meta name="twitter:title" content="Loopring">
+    <meta name="twitter:description" content="Ethereum zkRollup Exchange and Payment Protocol">
+    <meta name="twitter:image" content="https://loopring.io/assets/images/LRC.png">
+
     <title>Loopring Exchange (DEX)</title>
 </head>
 
